# utv

./: LICENSE
utv_description/: CMakeLists.txt  package.xml
utv_description/config/: ackerdrive.yaml  diffdrive.yaml
utv_description/launch/: display.launch  drive.launch  gazebo.launch
utv_description/meshes/: UTV_BLW v2.stl  UTV_BLW.stl  UTV_BRW.stl  UTV_FLW v2.stl  UTV_FLW.stl  UTV_FRW.stl
utv_description/urdf/: utv.urdf  utv_steer.urdf
vehicle_gazebo_simulation_interface/: CMakeLists.txt
vehicle_model/: CMakeLists.txt  package.xml
vehicle_model/config/: vehicle_info.yaml
vehicle_model/launch/: display.launch  drive.launch  gazebo.launch
vehicle_model/mesh/: wheel.stl
vehicle_model/rviz/: urdf.rviz
vehicle_model/urdf/: body.xacro  vehicle.gazebo  vehicle.xacro  wheel.xacro
