<?xml version="1.0"?>
<package format="2">
  <name>utv_description</name>
  <version>0.0.0</version>
  <description>The utv package</description>

  <maintainer email="hai_d94@hotmail.com">hai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
