<?xml version="1.0"?>
<package format="2">
  <name>vehicle_model</name>
  <version>1.12.0</version>
  <description>The vehicle_model package</description>
  <maintainer email="yukky.saito@gmail.com">yukihiro saito</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
